--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Ctrl+Shift-click a game's icon to open it in cloaked mode.
 </html>
 <script src="./ping.js"></script>
 <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
-<script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+<script src="https://unpkg.com/tippy.js@6"></script>
 <script type="text/javascript" src="toastify.js"></script>
 <script src="search.js"></script>
 <script src="jquery.js"></script>
