--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>
     <p><fixtest class="console"><input style="display: none;" type="text" id="console" autocorrect="off"></fixtest></p>
     <button class="button" onclick="share()">Share</button>
-    <button class="button" onclick="window.open('https://bit.ly/zgamesv2')">Download page (for updates)</button>
+    <button class="button" onclick="dlpage()">Download page (for updates)</button>
     <div class="customjs">
     <input type="text" placeholder="Run custom JS" id="customjs" oninput="" autocorrect="off">
     </div>
