--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- <a href="games/hexgl/"><img src="images/hexgl.jpg" alt="hexgl"></a> -->
         <a href="https://zkayns.github.io/bugfreeguacamole/retro-bowl"><img src="images/retro-bowl.jpg" alt="Retro Bowl"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/drive-mad"><img src="images/drive-mad.jpg" alt="Drive Mad"></a>
-        <a href="./games/slope/index.html"><img src="images/slope.jpg" alt="Slope"></a>
+        <a href="https://zkayns.github.io/Slope"><img src="images/slope.jpg" alt="Slope"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/hackertyper"><img src="images/hackertyper.png" alt="Hackertyper"></a>
         <a href="games/1v1xd/index.html"><img src="images/1v1.png" alt="1v1.LOL"></a>
         <a href="games/dogeminer/index.html"><img src="images/dogeminer_300x300.png" alt="Dogeminer"></a>
@@ -120,6 +120,7 @@
         <a href="https://zg-yohoho.glitch.me"><img src="images/yohoho.png" alt="YoHoHo"></a>
         <a href="https://zg-gs.glitch.me"><img src="images/getaway.jpg" alt="Getaway Shootout"></a>
         <a href="https://zarraz.glitch.me"><img src="images/arras.png" alt="Zarraz"></a>
+        <a href="https://zkayns.github.io/bugfreeguacamole/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
         <a href="https://zkayns.github.io/ruffle"><img src="images/ruffle.png" alt="Ruffle"></a>\
         <a href="https://zkayns.github.io/waflash-demo"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
