--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <a href="https://zg-gs.glitch.me"><img src="images/getaway.jpg" alt="Getaway Shootout"></a>
         <a href="https://zarraz.glitch.me"><img src="images/arras.png" alt="Zarraz"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
+        <a href="https://zkayns.github.io/bugfreeguacamole/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
         <a href="https://zkayns.github.io/ruffle"><img src="images/ruffle.png" alt="Ruffle"></a>\
         <a href="https://zkayns.github.io/waflash-demo"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
