--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body <!--class="light"-->>
     <nav>
         <img src="images/logo.png" alt="logo" id="logoImg" onclick="logoClicked()"> <!-- we change nothing about the logo because we are too lazy to, #lit -->
-        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by Golden Union) v2.2.1 (8.16.2024) </p><p id="time"><p id="accountstuff"><a href="./account.html">Account</a></a></p></p>
+        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by Golden Union) v2.2.2 (8.16.2024) </p><p id="time"><p id="accountstuff"><a href="./account.html">Account</a></a></p></p>
         <!-- when changing the version number remember to make sure it's only 5 characters long, no more, no less. if you don't auto-updating will break. also, reminder for zkayns (me!) make sure to change the thingy in version.txt -->
     </nav>
     <div class="featured">
@@ -86,7 +86,7 @@
         <!-- <a href="games/hexgl/"><img src="images/hexgl.jpg" alt="hexgl"></a> -->
         <a href="https://zkayns.github.io/bugfreeguacamole/retro-bowl"><img src="images/retro-bowl.jpg" alt="Retro Bowl"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/drive-mad"><img src="images/drive-mad.jpg" alt="Drive Mad"></a>
-        <a href="https://zkayns.github.io/Slope"><img src="images/slope.jpg" alt="Slope"></a>
+        <a href="https://zkayns.github.io/bugfreeguacamole/slope/index.html"><img src="images/slope.jpg" alt="Slope"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/hackertyper"><img src="images/hackertyper.png" alt="Hackertyper"></a>
         <a href="games/1v1xd/index.html"><img src="images/1v1.png" alt="1v1.LOL"></a>
         <a href="games/dogeminer/index.html"><img src="images/dogeminer_300x300.png" alt="Dogeminer"></a>
@@ -122,6 +122,8 @@
         <a href="https://zarraz.glitch.me"><img src="images/arras.png" alt="Zarraz"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
+        <a href="https://zkayns.github.io/bugfreeguacamole/adventurecapitalist"><img src="images/cap.avif" alt="AdvVnture Capitalist"></a>
+        <a href="https://zkayns.github.io/bugfreeguacamole/driftboss"><img src="images/drift.jpg" alt="Drift Boss"></a>
         <a href="https://zkayns.github.io/ruffle"><img src="images/ruffle.png" alt="Ruffle"></a>\
         <a href="https://zkayns.github.io/waflash-demo"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
