--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         <a href="https://zkayns.github.io/bugfreeguacamole/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/adventurecapitalist"><img src="images/cap.avif" alt="AdvVnture Capitalist"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/driftboss"><img src="images/drift.jpg" alt="Drift Boss"></a>
+        <a href="https://crossy-zoad.glitch.me"><img src="images/crossyroad.png" alt="Crossy Road"></a>
         <a href="https://zkayns.github.io/ruffle"><img src="images/ruffle.png" alt="Ruffle"></a>\
         <a href="https://zkayns.github.io/waflash-demo"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
