--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body <!--class="light"-->>
     <nav>
         <img src="images/logo.png" alt="logo" id="logoImg" onclick="logoClicked()"> <!-- we change nothing about the logo because we are too lazy to, #lit -->
-        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.3.7 (10.1.2024) </p><p id="time"><p id="accountstuff"><a href="./account.html">Account</a></a></p></p>
+        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.3.8 (10.2.2024) </p><p id="time"><p id="accountstuff"><a href="./account.html">Account</a></a></p></p>
         <!-- when changing the version number remember to make sure it's only 5 characters long, no more, no less. if you don't auto-updating will break. also, reminder for zkayns (me!) make sure to change the thingy in version.txt -->
     </nav>
     <div class="featured">
@@ -130,6 +130,7 @@
         <a href="https://gangsta-dino.glitch.me"><img src="images/dino.webp" alt="Chrome Dino"></a>
         <a href="https://snake-from-fortnite.glitch.me"><img src="images/snake.webp" alt="Google Snake"></a>
         <a href="https://aswc.glitch.me"><img src="images/aswc.jpg" alt="A Small World Cup"></a>
+        <a href="https://zeggy-car.glitch.me"><img src="images/eggy-car.png" alt="Eggy Car"></a>
         <a href="https://zkayns.github.io/ruffle"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://zkayns.github.io/waflash-demo"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
