--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </a>
         </div>
         <div class="row">
-          <a href="games/1v1xd/index.html">
+          <a href="https://1v1butitworks.glitch.me">
             <img src="images/1v1.png" alt="1v1.LOL">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
@@ -89,7 +89,7 @@
         <a href="https://zkayns.github.io/bugfreeguacamole/drive-mad"><img src="images/drive-mad.jpg" alt="Drive Mad"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/slope/index.html"><img src="images/slope.jpg" alt="Slope"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/hackertyper"><img src="images/hackertyper.png" alt="Hackertyper"></a>
-        <a href="games/1v1xd/index.html"><img src="images/1v1.png" alt="1v1.LOL"></a>
+        <a href="https://1v1butitworks.glitch.me"><img src="images/1v1.png" alt="1v1.LOL"></a>
         <a href="games/dogeminer/index.html"><img src="images/dogeminer_300x300.png" alt="Dogeminer"></a>
         <!-- <a href="games/dogeminer2/"><img src="images/dogeminer2.jpg" alt="dogeminer 2"></a> -->
         <a href="https://zkayns.github.io/bugfreeguacamole/cellmachine/"><img src="images/cellmachine.png" alt="Cell Machine"></a>
