--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <a href="https://aswc.glitch.me"><img src="images/aswc.jpg" alt="A Small World Cup"></a>
         <a href="https://zeggy-car.glitch.me"><img src="images/eggy-car.png" alt="Eggy Car"></a>
         <a href="https://thelettervsixtimes.glitch.me"><img src="images/vvvvvv.webp" alt="VVVVVV"></a>
+        <a href="https://zkayns.github.io/jellytruck"><img src="images/jellytruck.png" alt="Jelly Truck"></a>
         <a href="https://zkayns.github.io/ruffle"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://zkayns.github.io/waflash-demo"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
