--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body <!--class="light"-->>
     <nav>
         <img src="images/logo.png" alt="logo" id="logoImg" onclick="logoClicked()"> <!-- we change nothing about the logo because we are too lazy to, #lit -->
-        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.4.2 (2.5.2025) </p><p id="time"><p id="accountstuff"><a href="./account.html">Account</a></a></p></p>
+        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.4.3 (2.6.2025) </p><p id="time"><p id="accountstuff"><a href="./account.html">Account</a></a></p></p>
         <!-- when changing the version number remember to make sure it's only 5 characters long, no more, no less. if you don't auto-updating will break. also, reminder for zkayns (me!) make sure to change the thingy in version.txt -->
     </nav>
     <div class="featured">
@@ -61,8 +61,8 @@
                 <i class="fa-solid fa-play"></i>
             </div>
           </a>
-          <a href="games/dogeminer/index.html">
-            <img src="images/dogeminer_300x300.png" alt="Dogeminer">
+          <a href="https://zkayns.github.io/webprboom/doom1/doom1.html">
+            <img src="images/doom.jpeg" alt="DOOM">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
             </div>
@@ -133,6 +133,7 @@
         <a href="https://zeggy-car.glitch.me"><img src="images/eggy-car.png" alt="Eggy Car"></a>
         <a href="https://thelettervsixtimes.glitch.me"><img src="images/vvvvvv.webp" alt="VVVVVV"></a>
         <a href="https://zkayns.github.io/jellytruck"><img src="images/jellytruck.png" alt="Jelly Truck"></a>
+        <a href="https://zkayns.github.io/webprboom/doom1/doom1.html"><img src="images/doom.jpeg" alt="DOOM"></a>
         <a href="https://zkayns.github.io/ruffle"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://zkayns.github.io/waflash-demo"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
