--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <h1 id="message"></h1>
         <br>
         <div class="column">
-          <a href="https://zkayns.github.io/ruffle">
-            <img src="images/ruffle.png" alt="Ruffle">
+          <a href="https://zkayns.github.io/run3">
+            <img src="images/run3.jpeg" alt="Run 3">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
             </div>
@@ -134,6 +134,7 @@
         <a href="https://thelettervsixtimes.glitch.me"><img src="images/vvvvvv.webp" alt="VVVVVV"></a>
         <a href="https://zkayns.github.io/jellytruck"><img src="images/jellytruck.png" alt="Jelly Truck"></a>
         <a href="https://zkayns.github.io/webprboom/doom1/doom1.html"><img src="images/doom.jpeg" alt="DOOM"></a>
+        <a href="https://zkayns.github.io/run3"><img src="images/run3.jpeg" alt="Run 3"></a>
         <a href="https://zkayns.github.io/ruffle"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://zkayns.github.io/waflash-demo"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
