--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <a href="https://zkayns.github.io/jellytruck"><img src="images/jellytruck.png" alt="Jelly Truck"></a>
         <a href="https://zkayns.github.io/webprboom/doom1/doom1.html"><img src="images/doom.jpeg" alt="DOOM"></a>
         <a href="https://zkayns.github.io/run3"><img src="images/run3.jpeg" alt="Run 3"></a>
+        <a href="https://zkayns.github.io/moto-x3m-spooky"><img src="images/moto-x3m-spooky.jpeg" alt="Moto X3M Spooky Land"></a>
         <a href="https://zkayns.github.io/ruffle"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://zkayns.github.io/waflash-demo"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
