--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <i class="fa-solid fa-play"></i>
             </div>
           </a>
-          <a href="https://zkayns.github.io/webprboom/doom1/doom1.html">
+          <a href="https://webprboom.netlify.app/doom1/doom1.html">
             <img src="images/doom.jpeg" alt="DOOM">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
@@ -79,28 +79,28 @@
     </div>
 
     <div id="games">
-        <a href="https://zkayns.github.io/bugfreeguacamole/vex3"><img src="images/vex3.jpg" alt="Vex 3"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/vex4"><img src="images/vex4.jpg" alt="Vex 4"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/vex5"><img src="images/vex5.jpg" alt="Vex 5"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/vex6"><img src="images/vex6.jpeg" alt="Vex 6"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/vex3"><img src="images/vex3.jpg" alt="Vex 3"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/vex4"><img src="images/vex4.jpg" alt="Vex 4"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/vex5"><img src="images/vex5.jpg" alt="Vex 5"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/vex6"><img src="images/vex6.jpeg" alt="Vex 6"></a>
         <!-- <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a> which idiot made vex7 softlock after level 1 bro-->
         <!-- <a href="games/hexgl/"><img src="images/hexgl.jpg" alt="hexgl"></a> -->
-        <a href="https://zkayns.github.io/bugfreeguacamole/retro-bowl"><img src="images/retro-bowl.jpg" alt="Retro Bowl"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/drive-mad"><img src="images/drive-mad.jpg" alt="Drive Mad"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/slope/index.html"><img src="images/slope.jpg" alt="Slope"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/hackertyper"><img src="images/hackertyper.png" alt="Hackertyper"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/retro-bowl"><img src="images/retro-bowl.jpg" alt="Retro Bowl"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/drive-mad"><img src="images/drive-mad.jpg" alt="Drive Mad"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/slope/index.html"><img src="images/slope.jpg" alt="Slope"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/hackertyper"><img src="images/hackertyper.png" alt="Hackertyper"></a>
         <a href="https://1v1butitworks.glitch.me"><img src="images/1v1.png" alt="1v1.LOL"></a>
         <a href="games/dogeminer/index.html"><img src="images/dogeminer_300x300.png" alt="Dogeminer"></a>
         <!-- <a href="games/dogeminer2/"><img src="images/dogeminer2.jpg" alt="dogeminer 2"></a> -->
-        <a href="https://zkayns.github.io/bugfreeguacamole/cellmachine/"><img src="images/cellmachine.png" alt="Cell Machine"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/basketbros"><img src="images/basketbros.jpg" alt="Basketbros"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/basketrandom"><img src="images/basketrandom.jpeg" alt="Basket Random"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/boxingrandom"><img src="images/boxingrandom.jpg" alt="Boxing Random"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/cellmachine/"><img src="images/cellmachine.png" alt="Cell Machine"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/basketbros"><img src="images/basketbros.jpg" alt="Basketbros"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/basketrandom"><img src="images/basketrandom.jpeg" alt="Basket Random"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/boxingrandom"><img src="images/boxingrandom.jpg" alt="Boxing Random"></a>
         <a href="https://sokka-randomi.glitch.me"><img src="images/soccer-random.png" alt="Soccer Random"></a>
         <a href="https://zkayns.github.io/rooftopsnipers"><img src="images/rooftopsnipers.avif" alt="Rooftop Snipers"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/bad-ice-cream"><img src="images/bad-ice-cream.png" alt="Bad Ice Cream"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/bad-ice-cream-2"><img src="images/bad-ice-cream-2.png" alt="Bad Ice Cream 2"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/bad-ice-cream-3"><img src="images/bad-ice-cream-3.png" alt="Bad Ice Cream 3"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/bad-ice-cream"><img src="images/bad-ice-cream.png" alt="Bad Ice Cream"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/bad-ice-cream-2"><img src="images/bad-ice-cream-2.png" alt="Bad Ice Cream 2"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/bad-ice-cream-3"><img src="images/bad-ice-cream-3.png" alt="Bad Ice Cream 3"></a>
         <a href="./games/twitch-tetris/index.html"><img src="images/twitch-tetris.png" alt="TwitchTetris"></a>
         <a href="./games/snowrider/index.html"><img src="images/snowrider.jpg" alt="Snow Rider 3D"></a>
         <!--<a href="https://chess.1447621498.repl.co/"><img src="images/chess.png" alt="chess"></a> -->
@@ -109,7 +109,7 @@
         <a href="./games/onion-quest-1.5.html"><img src="images/15.png" alt="Onion Quest 1.5"></a>
         <!--<a href="./games/among.html"><img src="images/amoung us xaxaxa.jpg" alt="among us"></a>-->
         <!-- <a href="https://zgames.zkayns.repl.co/games/drift-boss"><img src="images/driftboss.png" alt="drift boss"></a> -->
-        <a href="https://zkayns.github.io/bugfreeguacamole/papasburgeria"><img src="images/burgeria.jpg" alt="Papa's Burgeria"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/papasburgeria"><img src="images/burgeria.jpg" alt="Papa's Burgeria"></a>
         <a href="https://zkayns.github.io/ovo"><img src="images/ovo.png" alt="OvO"></a>
         <a href="https://zkayns.github.io/SM64-JS"><img src="images/sm64.jpg" alt="Super Mario 64"></a>
         <a href="./games/cclicker/index.html"><img src="images/cookieclicker.png" alt="Cookie Clicker"></a>
@@ -122,10 +122,10 @@
         <a href="https://zg-yohoho.glitch.me"><img src="images/yohoho.png" alt="YoHoHo"></a>
         <a href="https://zg-gs.glitch.me"><img src="images/getaway.jpg" alt="Getaway Shootout"></a>
         <a href="https://zarraz.glitch.me"><img src="images/arras.png" alt="Zarraz"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/adventurecapitalist"><img src="images/cap.avif" alt="AdvVnture Capitalist"></a>
-        <a href="https://zkayns.github.io/bugfreeguacamole/driftboss"><img src="images/drift.jpg" alt="Drift Boss"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/adventurecapitalist"><img src="images/cap.avif" alt="AdvVnture Capitalist"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/driftboss"><img src="images/drift.jpg" alt="Drift Boss"></a>
         <a href="https://crossy-zoad.glitch.me"><img src="images/crossyroad.png" alt="Crossy Road"></a>
         <a href="https://gangsta-dino.glitch.me"><img src="images/dino.webp" alt="Chrome Dino"></a>
         <a href="https://snake-from-fortnite.glitch.me"><img src="images/snake.webp" alt="Google Snake"></a>
