--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <i class="fa-solid fa-play"></i>
             </div>
           </a>
-          <a href="https://zkayns.github.io/ovo">
+          <a href="https://ovho.netlify.app">
             <img src="images/ovo.png" alt="OvO">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
@@ -110,7 +110,7 @@
         <!--<a href="./games/among.html"><img src="images/amoung us xaxaxa.jpg" alt="among us"></a>-->
         <!-- <a href="https://zgames.zkayns.repl.co/games/drift-boss"><img src="images/driftboss.png" alt="drift boss"></a> -->
         <a href="https://bitcoinburgeribratv.netlify.app/papasburgeria"><img src="images/burgeria.jpg" alt="Papa's Burgeria"></a>
-        <a href="https://zkayns.github.io/ovo"><img src="images/ovo.png" alt="OvO"></a>
+        <a href="https://ovho.netlify.app"><img src="images/ovo.png" alt="OvO"></a>
         <a href="https://zkayns.github.io/SM64-JS"><img src="images/sm64.jpg" alt="Super Mario 64"></a>
         <a href="./games/cclicker/index.html"><img src="images/cookieclicker.png" alt="Cookie Clicker"></a>
         <a href="https://zhextris.glitch.me"><img src="images/hextris.png" alt="Hextris"></a>
