--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </a>
         </div>
         <div class="column">
-          <a href="https://zkayns.github.io/SM64-JS/">
+          <a href="https://sm64-js.netlify.app">
             <img src="images/sm64.jpg" alt="Super Mario 64">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
@@ -111,7 +111,7 @@
         <!-- <a href="https://zgames.zkayns.repl.co/games/drift-boss"><img src="images/driftboss.png" alt="drift boss"></a> -->
         <a href="https://bitcoinburgeribratv.netlify.app/papasburgeria"><img src="images/burgeria.jpg" alt="Papa's Burgeria"></a>
         <a href="https://ovho.netlify.app"><img src="images/ovo.png" alt="OvO"></a>
-        <a href="https://zkayns.github.io/SM64-JS"><img src="images/sm64.jpg" alt="Super Mario 64"></a>
+        <a href="https://sm64-js.netlify.app"><img src="images/sm64.jpg" alt="Super Mario 64"></a>
         <a href="./games/cclicker/index.html"><img src="images/cookieclicker.png" alt="Cookie Clicker"></a>
         <a href="https://zhextris.glitch.me"><img src="images/hextris.png" alt="Hextris"></a>
         <a href="./games/2048/index.html"><img src="images/2048.png" alt="2048"></a>
