--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <a href="https://aswc.glitch.me"><img src="images/aswc.jpg" alt="A Small World Cup"></a>
         <a href="https://zeggy-car.glitch.me"><img src="images/eggy-car.png" alt="Eggy Car"></a>
         <a href="https://thelettervsixtimes.glitch.me"><img src="images/vvvvvv.webp" alt="VVVVVV"></a>
-        <a href="https://zkayns.github.io/jellytruck"><img src="images/jellytruck.png" alt="Jelly Truck"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/jellytruck"><img src="images/jellytruck.png" alt="Jelly Truck"></a>
         <a href="https://webprboom.netlify.app/doom1/doom1.html"><img src="images/doom.jpeg" alt="DOOM"></a>
         <a href="https://run-the-third.netlify.app"><img src="images/run3.jpeg" alt="Run 3"></a>
         <a href="https://moto-x3m-spooky.glitch.me"><img src="images/moto-x3m-spooky.jpeg" alt="Moto X3M Spooky Land"></a>
