--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <a href="https://run-the-third.netlify.app"><img src="images/run3.jpeg" alt="Run 3"></a>
         <a href="https://moto-x3m-spooky.glitch.me"><img src="images/moto-x3m-spooky.jpeg" alt="Moto X3M Spooky Land"></a>
         <a href="https://zkayns.github.io/ruffle"><img src="images/ruffle.png" alt="Ruffle"></a>
-        <a href="https://zkayns.github.io/waflash-demo"><img src="images/waflash.png" alt="WAFlash"></a>
+        <a href="https://waflash-demo.netlify.app"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
         <a href="https://zkayns.github.io/ejsdemo"><img src="images/emulatorjs.png" alt="EmulatorJS"></a>
     </div>
