--- a/index.html
+++ b/index.html
@@ -107,15 +107,13 @@
         <a href="https://ovho.netlify.app"><img src="images/ovo.png" alt="OvO"></a>
         <a href="https://sm64-js.netlify.app"><img src="images/sm64.jpg" alt="Super Mario 64"></a>
         <a href="./games/cclicker/index.html"><img src="images/cookieclicker.png" alt="Cookie Clicker"></a>
-        <a href="https://zhextris.glitch.me"><img src="images/hextris.png" alt="Hextris"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/hextris"><img src="images/hextris.png" alt="Hextris"></a>
         <a href="./games/2048/index.html"><img src="images/2048.png" alt="2048"></a>
         <a href="https://ztunnelrush.glitch.me"><img src="images/tunnelrush.png" alt="Tunnel Rush"></a>
         <a href="https://caseoh-breakout.glitch.me/"><img src="images/idlebreakout.png" alt="Idle Breakout"></a>
         <a href="./games/adofai/index.html"><img src="images/adofai.png" alt="A Dance of Fire and Ice"></a>
         <a href="https://ages-of-conflict.glitch.me/"><img src="images/aoc.png" alt="Ages of Conflict"></a>
-        <a href="https://zg-yohoho.glitch.me"><img src="images/yohoho.png" alt="YoHoHo"></a>
         <a href="https://zg-gs.glitch.me"><img src="images/getaway.jpg" alt="Getaway Shootout"></a>
-        <a href="https://zarraz.glitch.me"><img src="images/arras.png" alt="Zarraz"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/adventurecapitalist"><img src="images/cap.avif" alt="AdvVnture Capitalist"></a>
