--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <a href="https://rufflez.netlify.app"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://waflash-demo.netlify.app"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
-        <a href="https://zkayns.github.io/ejsdemo"><img src="images/emulatorjs.png" alt="EmulatorJS"></a>
+        <a href="https://emulatorjz.netlify.app"><img src="images/emulatorjs.png" alt="EmulatorJS"></a>
     </div>
     </div>
     <p><fixtest class="console"><input style="display: none;" type="text" id="console" autocorrect="off"></fixtest></p>
