--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body <!--class="light"-->>
     <nav>
         <img src="images/logo.png" alt="logo" id="logoImg" onclick="logoClicked()"> <!-- we change nothing about the logo because we are too lazy to, #lit -->
-        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.4.4 (3.7.2025) </p><p id="time"><p id="accountstuff"><a href="./account.html"></a></a></p></p>
+        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.4.5 (4.1.2025) </p><p id="time"><p id="accountstuff"><a href="./account.html"></a></a></p></p>
         <!-- when changing the version number remember to make sure it's only 5 characters long, no more, no less. if you don't auto-updating will break. also, reminder for zkayns (me!) make sure to change the thingy in version.txt -->
     </nav>
     <div class="featured">
@@ -89,7 +89,7 @@
         <a href="https://bitcoinburgeribratv.netlify.app/drive-mad"><img src="images/drive-mad.jpg" alt="Drive Mad"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/slope/index.html"><img src="images/slope.jpg" alt="Slope"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/hackertyper"><img src="images/hackertyper.png" alt="Hackertyper"></a>
-        <a href="https://1v1butitworks.glitch.me"><img src="images/1v1.png" alt="1v1.LOL"></a>
+        <a href="https://zkayns.github.io/1v1-2.700"><img src="images/1v1.png" alt="1v1.LOL"></a>
         <a href="games/dogeminer/index.html"><img src="images/dogeminer_300x300.png" alt="Dogeminer"></a>
         <!-- <a href="games/dogeminer2/"><img src="images/dogeminer2.jpg" alt="dogeminer 2"></a> -->
         <a href="https://bitcoinburgeribratv.netlify.app/cellmachine/"><img src="images/cellmachine.png" alt="Cell Machine"></a>
@@ -128,6 +128,7 @@
         <a href="https://webprboom.netlify.app/doom1/doom1.html"><img src="images/doom.jpeg" alt="DOOM"></a>
         <a href="https://run-the-third.netlify.app"><img src="images/run3.jpeg" alt="Run 3"></a>
         <a href="https://moto-x3m-spooky.glitch.me"><img src="images/moto-x3m-spooky.jpeg" alt="Moto X3M Spooky Land"></a>
+        <a href="https://zkayns.github.io/1v1-2.700"><img src="images/granny.jpeg" alt="Moto X3M Spooky Land"></a>
         <a href="https://rufflez.netlify.app"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://waflash-demo.netlify.app"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
