--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </a>
         </div>
         <div class="row">
-          <a href="https://1v1butitworks.glitch.me">
+          <a href="https://zkayns.github.io/1v1-2.700">
             <img src="images/1v1.png" alt="1v1.LOL">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
@@ -128,7 +128,7 @@
         <a href="https://webprboom.netlify.app/doom1/doom1.html"><img src="images/doom.jpeg" alt="DOOM"></a>
         <a href="https://run-the-third.netlify.app"><img src="images/run3.jpeg" alt="Run 3"></a>
         <a href="https://moto-x3m-spooky.glitch.me"><img src="images/moto-x3m-spooky.jpeg" alt="Moto X3M Spooky Land"></a>
-        <a href="https://zkayns.github.io/1v1-2.700"><img src="images/granny.jpeg" alt="Moto X3M Spooky Land"></a>
+        <a href="https://zkayns.github.io/grandma"><img src="images/granny.jpeg" alt="Granny"></a>
         <a href="https://rufflez.netlify.app"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://waflash-demo.netlify.app"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
