--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <a href="https://bitcoinburgeribratv.netlify.app/bad-ice-cream-2"><img src="images/bad-ice-cream-2.png" alt="Bad Ice Cream 2"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/bad-ice-cream-3"><img src="images/bad-ice-cream-3.png" alt="Bad Ice Cream 3"></a>
         <a href="./games/twitch-tetris/index.html"><img src="images/twitch-tetris.png" alt="TwitchTetris"></a>
-        <a href="./games/snowrider/index.html"><img src="images/snowrider.jpg" alt="Snow Rider 3D"></a>
+        <a href="https://zkayns.github.io/bugfreeguacamole/snowrider3d"><img src="images/snowrider.jpg" alt="Snow Rider 3D"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/papasburgeria"><img src="images/burgeria.jpg" alt="Papa's Burgeria"></a>
         <a href="https://ovho.netlify.app"><img src="images/ovo.png" alt="OvO"></a>
         <a href="https://sm64-js.netlify.app"><img src="images/sm64.jpg" alt="Super Mario 64"></a>
