--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <a href="https://crossy-zoad.glitch.me"><img src="images/crossyroad.png" alt="Crossy Road"></a>
         <a href="https://gangsta-dino.glitch.me"><img src="images/dino.webp" alt="Chrome Dino"></a>
         <a href="https://snake-from-fortnite.glitch.me"><img src="images/snake.webp" alt="Google Snake"></a>
-        <a href="https://aswc.glitch.me"><img src="images/aswc.jpg" alt="A Small World Cup"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/aswc"><img src="images/aswc.jpg" alt="A Small World Cup"></a>
         <a href="https://zeggy-car.glitch.me"><img src="images/eggy-car.png" alt="Eggy Car"></a>
         <a href="https://thelettervsixtimes.glitch.me"><img src="images/vvvvvv.webp" alt="VVVVVV"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/jellytruck"><img src="images/jellytruck.png" alt="Jelly Truck"></a>
