--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <a href="./games/cclicker/index.html"><img src="images/cookieclicker.png" alt="Cookie Clicker"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/hextris"><img src="images/hextris.png" alt="Hextris"></a>
         <a href="./games/2048/index.html"><img src="images/2048.png" alt="2048"></a>
-        <a href="https://ztunnelrush.glitch.me"><img src="images/tunnelrush.png" alt="Tunnel Rush"></a>
+        <a href="https://zkayns.github.io/tunnel-rush"><img src="images/tunnelrush.png" alt="Tunnel Rush"></a>
         <a href="https://caseoh-breakout.glitch.me/"><img src="images/idlebreakout.png" alt="Idle Breakout"></a>
         <a href="./games/adofai/index.html"><img src="images/adofai.png" alt="A Dance of Fire and Ice"></a>
         <a href="https://ages-of-conflict.glitch.me/"><img src="images/aoc.png" alt="Ages of Conflict"></a>
@@ -121,7 +121,7 @@
         <a href="https://crossy-zoad.glitch.me"><img src="images/crossyroad.png" alt="Crossy Road"></a>
         <a href="https://gangsta-dino.glitch.me"><img src="images/dino.webp" alt="Chrome Dino"></a>
         <a href="https://snake-from-fortnite.glitch.me"><img src="images/snake.webp" alt="Google Snake"></a>
-        <a href="https://bitcoinburgeribratv.netlify.app/aswc"><img src="images/aswc.jpg" alt="A Small World Cup"></a>
+        <a href="https://zkayns.github.io/a-small-world-cup"><img src="images/aswc.jpg" alt="A Small World Cup"></a>
         <a href="https://zeggy-car.glitch.me"><img src="images/eggy-car.png" alt="Eggy Car"></a>
         <a href="https://thelettervsixtimes.glitch.me"><img src="images/vvvvvv.webp" alt="VVVVVV"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/jellytruck"><img src="images/jellytruck.png" alt="Jelly Truck"></a>
