--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body <!--class="light"-->>
     <nav>
         <img src="images/logo.png" alt="logo" id="logoImg" onclick="logoClicked()"> <!-- we change nothing about the logo because we are too lazy to, #lit -->
-        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.4.5 (4.1.2025) </p><p id="time"><p id="accountstuff"><a href="./account.html"></a></a></p></p>
+        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.4.6 (4.2.2025) </p><p id="time"><p id="accountstuff"><a href="./account.html"></a></a></p></p>
         <!-- when changing the version number remember to make sure it's only 5 characters long, no more, no less. if you don't auto-updating will break. also, reminder for zkayns (me!) make sure to change the thingy in version.txt -->
     </nav>
     <div class="featured">
@@ -109,7 +109,7 @@
         <a href="./games/cclicker/index.html"><img src="images/cookieclicker.png" alt="Cookie Clicker"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/hextris"><img src="images/hextris.png" alt="Hextris"></a>
         <a href="./games/2048/index.html"><img src="images/2048.png" alt="2048"></a>
-        <a href="https://zkayns.github.io/tunnel-rush"><img src="images/tunnelrush.png" alt="Tunnel Rush"></a>
+        <a href="https://zkayns.github.io/bugfreeguacamole/tunnelrush"><img src="images/tunnelrush.png" alt="Tunnel Rush"></a>
         <a href="https://caseoh-breakout.glitch.me/"><img src="images/idlebreakout.png" alt="Idle Breakout"></a>
         <a href="./games/adofai/index.html"><img src="images/adofai.png" alt="A Dance of Fire and Ice"></a>
         <a href="https://ages-of-conflict.glitch.me/"><img src="images/aoc.png" alt="Ages of Conflict"></a>
