--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body <!--class="light"-->>
     <nav>
         <img src="images/logo.png" alt="logo" id="logoImg" onclick="logoClicked()"> <!-- we change nothing about the logo because we are too lazy to, #lit -->
-        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.4.6 (4.2.2025) </p><p id="time"><p id="accountstuff"><a href="./account.html"></a></a></p></p>
+        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.4.7 (4.3.2025) </p><p id="time"><p id="accountstuff"><a href="./account.html"></a></a></p></p>
         <!-- when changing the version number remember to make sure it's only 5 characters long, no more, no less. if you don't auto-updating will break. also, reminder for zkayns (me!) make sure to change the thingy in version.txt -->
     </nav>
     <div class="featured">
@@ -96,7 +96,7 @@
         <a href="https://bitcoinburgeribratv.netlify.app/basketbros"><img src="images/basketbros.jpg" alt="Basketbros"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/basketrandom"><img src="images/basketrandom.jpeg" alt="Basket Random"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/boxingrandom"><img src="images/boxingrandom.jpg" alt="Boxing Random"></a>
-        <a href="https://sokka-randomi.glitch.me"><img src="images/soccer-random.png" alt="Soccer Random"></a>
+        <a href="https://zkayns.github.io/timcheese/soccer-random"><img src="images/soccer-random.png" alt="Soccer Random"></a>
         <a href="https://lee-harvey-oswald.netlify.app"><img src="images/rooftopsnipers.avif" alt="Rooftop Snipers"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/bad-ice-cream"><img src="images/bad-ice-cream.png" alt="Bad Ice Cream"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/bad-ice-cream-2"><img src="images/bad-ice-cream-2.png" alt="Bad Ice Cream 2"></a>
@@ -113,7 +113,7 @@
         <a href="https://caseoh-breakout.glitch.me/"><img src="images/idlebreakout.png" alt="Idle Breakout"></a>
         <a href="./games/adofai/index.html"><img src="images/adofai.png" alt="A Dance of Fire and Ice"></a>
         <a href="https://ages-of-conflict.glitch.me/"><img src="images/aoc.png" alt="Ages of Conflict"></a>
-        <a href="https://zg-gs.glitch.me"><img src="images/getaway.jpg" alt="Getaway Shootout"></a>
+        <a href="https://zkayns.github.io/timcheese/getaway-shootout"><img src="images/getaway.jpg" alt="Getaway Shootout"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/adventurecapitalist"><img src="images/cap.avif" alt="AdvVnture Capitalist"></a>
