--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <a href="https://zkayns.github.io/timcheese/getaway-shootout"><img src="images/getaway.jpg" alt="Getaway Shootout"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
-        <a href="https://bitcoinburgeribratv.netlify.app/adventurecapitalist"><img src="images/cap.avif" alt="AdvVnture Capitalist"></a>
+        <a href="https://bitcoinburgeribratv.netlify.app/adventurecapitalist"><img src="images/cap.avif" alt="AdVenture Capitalist"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/driftboss"><img src="images/drift.jpg" alt="Drift Boss"></a>
         <a href="https://crossy-zoad.glitch.me"><img src="images/crossyroad.png" alt="Crossy Road"></a>
         <a href="https://gangsta-dino.glitch.me"><img src="images/dino.webp" alt="Chrome Dino"></a>
