--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <a href="https://bitcoinburgeribratv.netlify.app/jellytruck"><img src="images/jellytruck.png" alt="Jelly Truck"></a>
         <a href="https://webprboom.netlify.app/doom1/doom1.html"><img src="images/doom.jpeg" alt="DOOM"></a>
         <a href="https://run-the-third.netlify.app"><img src="images/run3.jpeg" alt="Run 3"></a>
+        <a href="https://zkayns.github.io/timcheese/motox3m"><img src="images/moto-x3m.jpg" alt="Moto X3M"></a>
         <a href="https://zkayns.github.io/timcheese/motox3m-spooky"><img src="images/moto-x3m-spooky.jpeg" alt="Moto X3M Spooky Land"></a>
         <a href="https://zkayns.github.io/timcheese/motox3m-winter"><img src="images/moto-x3m-winter.jpeg" alt="Moto X3M Winter"></a>
         <a href="https://zkayns.github.io/timcheese/motox3m-pool"><img src="images/moto-x3m-pool.jpg" alt="Moto X3M Pool"></a>
