--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <a href="https://zkayns.github.io/timcheese/motox3m-pool"><img src="images/moto-x3m-pool.jpg" alt="Moto X3M 5: Pool Party"></a>
         <a href="https://zkayns.github.io/timcheese/motox3m-spooky"><img src="images/moto-x3m-spooky.jpeg" alt="Moto X3M 6: Spooky Land"></a>
         <a href="https://zkayns.github.io/grandma"><img src="images/granny.jpeg" alt="Granny"></a>
+        <a href="https://zkayns.github.io/polytrack"><img src="images/polytrack.svg" alt="PolyTrack"></a>
         <a href="https://rufflez.netlify.app"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://waflash-demo.netlify.app"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
