--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </script>
 <body <!--class="light"-->>
     <nav>
-        <img src="images/logo.png" alt="logo" id="logoImg" onclick="logoClicked()"> <!-- we change nothing about the logo because we are too lazy to, #lit -->
+        <img src="images/logo.png" alt="logo" id="logoImg"> <!-- we change nothing about the logo because we are too lazy to, #lit -->
         <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.4.7 (4.3.2025) </p><p id="time"><p id="accountstuff"><a href="./account.html"></a></a></p></p>
         <!-- when changing the version number remember to make sure it's only 5 characters long, no more, no less. if you don't auto-updating will break. also, reminder for zkayns (me!) make sure to change the thingy in version.txt -->
     </nav>
