--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <a href="./games/2048/index.html"><img src="images/2048.png" alt="2048"></a>
         <a href="https://zkayns.github.io/bugfreeguacamole/tunnelrush"><img src="images/tunnelrush.png" alt="Tunnel Rush"></a>
         <a href="https://zkayns.github.io/idle-breakout"><img src="images/idlebreakout.png" alt="Idle Breakout"></a>
-        <a href="./games/adofai/index.html"><img src="images/adofai.png" alt="A Dance of Fire and Ice"></a>
+        <a href="https://zkayns.github.io/a-dance-of-fire-and-ice"><img src="images/adofai.png" alt="A Dance of Fire and Ice"></a>
         <a href="https://ages-of-conflict.glitch.me/"><img src="images/aoc.png" alt="Ages of Conflict"></a>
         <a href="https://zkayns.github.io/timcheese/getaway-shootout"><img src="images/getaway.jpg" alt="Getaway Shootout"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
