--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <a href="https://bitcoinburgeribratv.netlify.app/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/adventurecapitalist"><img src="images/cap.avif" alt="AdVenture Capitalist"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/driftboss"><img src="images/drift.jpg" alt="Drift Boss"></a>
-        <a href="https://crossy-zoad.glitch.me"><img src="images/crossyroad.png" alt="Crossy Road"></a>
+        <a href="https://zkayns.github.io/crossy-road"><img src="images/crossyroad.png" alt="Crossy Road"></a>
         <a href="https://gangsta-dino.glitch.me"><img src="images/dino.webp" alt="Chrome Dino"></a>
         <a href="https://snake-from-fortnite.glitch.me"><img src="images/snake.webp" alt="Google Snake"></a>
         <a href="https://zkayns.github.io/a-small-world-cup"><img src="images/aswc.jpg" alt="A Small World Cup"></a>
