--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <a href="https://zkayns.github.io/timcheese/soccer-random"><img src="images/soccer-random.png" alt="Soccer Random"></a>
         <a href="https://zkayns.github.io/volley-random"><img src="images/volleyrandom.png" alt="Volley Random"></a>
         <a href="https://lee-harvey-oswald.netlify.app"><img src="images/rooftopsnipers.avif" alt="Rooftop Snipers"></a>
+        <a href="https://zkayns.github.io/timcheese/getaway-shootout"><img src="images/gs.png" alt="Getaway Shootout"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/bad-ice-cream"><img src="images/bad-ice-cream.png" alt="Bad Ice Cream"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/bad-ice-cream-2"><img src="images/bad-ice-cream-2.png" alt="Bad Ice Cream 2"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/bad-ice-cream-3"><img src="images/bad-ice-cream-3.png" alt="Bad Ice Cream 3"></a>
@@ -114,7 +115,6 @@
         <a href="https://zkayns.github.io/idle-breakout"><img src="images/idlebreakout.png" alt="Idle Breakout"></a>
         <a href="https://zkayns.github.io/a-dance-of-fire-and-ice"><img src="images/adofai.png" alt="A Dance of Fire and Ice"></a>
         <a href="https://ages-of-conflict.glitch.me/"><img src="images/aoc.png" alt="Ages of Conflict"></a>
-        <a href="https://zkayns.github.io/timcheese/getaway-shootout"><img src="images/getaway.jpg" alt="Getaway Shootout"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/adventurecapitalist"><img src="images/cap.avif" alt="AdVenture Capitalist"></a>
