--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         <a href="https://zkayns.github.io/grandma"><img src="images/granny.jpeg" alt="Granny"></a>
         <a href="https://zkayns.github.io/polytrack"><img src="images/polytrack.svg" alt="PolyTrack"></a>
         <a href="https://zkayns.github.io/timcheese/subway-surfers-beijing"><img src="images/subway-surfers-beijing.png" alt="Subway Surfers Beijing"></a>
+        <a href="https://zkayns.github.io/timcheese/subway-surfers-houston"><img src="images/subway-surfers-houston.jpeg" alt="Subway Surfers Houston"></a>
         <a href="https://rufflez.netlify.app"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://waflash-demo.netlify.app"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
