--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
         <a href="https://zkayns.github.io/bugfreeguacamole/tunnelrush"><img src="images/tunnelrush.png" alt="Tunnel Rush"></a>
         <a href="https://zkayns.github.io/idle-breakout"><img src="images/idlebreakout.png" alt="Idle Breakout"></a>
         <a href="https://zkayns.github.io/a-dance-of-fire-and-ice"><img src="images/adofai.png" alt="A Dance of Fire and Ice"></a>
-        <a href="https://ages-of-conflict.glitch.me/"><img src="images/aoc.png" alt="Ages of Conflict"></a>
+        <a href="https://ages-of-conflict.glitch.me/" class="disabled"><img src="images/aoc.png" alt="Ages of Conflict"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/paperio2"><img src="images/paperio2.jpg" alt="Paper.io 2"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/incremancer"><img src="images/incremancer.png" alt="Incremancer"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/adventurecapitalist"><img src="images/cap.avif" alt="AdVenture Capitalist"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/driftboss"><img src="images/drift.jpg" alt="Drift Boss"></a>
         <a href="https://zkayns.github.io/crossy-road"><img src="images/crossyroad.png" alt="Crossy Road"></a>
         <a href="https://zkayns.github.io/timcheese/dino"><img src="images/dino.webp" alt="Chrome Dino"></a>
-        <a href="https://snake-from-fortnite.glitch.me"><img src="images/snake.webp" alt="Google Snake"></a>
+        <a href="https://snake-from-fortnite.glitch.me" class="disabled"><img src="images/snake.webp" alt="Google Snake"></a>
         <a href="https://zkayns.github.io/a-small-world-cup"><img src="images/aswc.jpg" alt="A Small World Cup"></a>
-        <a href="https://zeggy-car.glitch.me"><img src="images/eggy-car.png" alt="Eggy Car"></a>
-        <a href="https://thelettervsixtimes.glitch.me"><img src="images/vvvvvv.webp" alt="VVVVVV"></a>
+        <a href="https://zeggy-car.glitch.me" class="disabled"><img src="images/eggy-car.png" alt="Eggy Car"></a>
+        <a href="https://thelettervsixtimes.glitch.me" class="disabled"><img src="images/vvvvvv.webp" alt="VVVVVV"></a>
         <a href="https://bitcoinburgeribratv.netlify.app/jellytruck"><img src="images/jellytruck.png" alt="Jelly Truck"></a>
         <a href="https://webprboom.netlify.app/doom1/doom1.html"><img src="images/doom.jpeg" alt="DOOM"></a>
         <a href="https://run-the-third.netlify.app"><img src="images/run3.jpeg" alt="Run 3"></a>
